--- a/day3b.ipynb
+++ b/day3b.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -36,40 +36,76 @@
     "#create an empty list and iterate through data list and split at all white space and newlines escape sequences append strings\n",
     "data1 =[]\n",
     "for l in data:\n",
-    "    data1.append(l.split())"
+    "    data1.append(l.split())   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 129,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5976"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#create empty list iterate through data1 list append int value to empty list \n",
     "clean_data = []\n",
     "for l in data1:\n",
     "    for x in l:\n",
-    "        clean_data.append(int(x))"
+    "        clean_data.append(int(x))        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 132,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "#for every n, n+3 and n+6 item in a list append to a new list. if an n exists in the master list skip it.\n",
-    "#look into loop control functons to solve this. \n",
-    "col_data = []\n",
+    "list1 = []\n",
+    "list2 = []\n",
+    "list3 = []\n",
+    "triangles = 0\n",
     "for i in clean_data:\n",
-    "    a =[i, i+3, i+6]\n",
-    "    col_data.append(a)\n",
-    "    if clean_data[i] in col_data:\n",
-    "        continue      "
+    "    if len(list1) == len(list2) and len(list1) == len(list3):\n",
+    "        list1.append(clean_data.pop(i))\n",
+    "    elif len(list1) > len(list2) and len(list2) == len(list3):\n",
+    "        list2.append(clean_data.pop(i))\n",
+    "    elif len(list3) < len(list2) and len(list3) < len(list1):\n",
+    "        list3.append(clean_data.pop(i))\n",
+    "    elif len(list1) == 3 and len(list2) == 3 and len(list3) == 3:\n",
+    "        list1.sort()\n",
+    "        list2.sort()\n",
+    "        list3.sort()\n",
+    "        if list1[0] + list1[1] > list1[2]:\n",
+    "            triangles += 1\n",
+    "        del list1[:]\n",
+    "        if list2[0] + list2[1] > list2[2]:\n",
+    "            triangles += 1\n",
+    "        del list2[:]\n",
+    "        if list3[0] + list3[1] > list3[2]:\n",
+    "            triangles += 1\n",
+    "        del list3[:]\n",
+    "print (triangles)        "
    ]
   }
  ],
